Base/Genric/Adservice-NP.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: adservice-policy
spec:
  podSelector:
    matchLabels:
      app: adservice
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontendservice
    ports:
    - protocol: TCP
      port: 9555
