Base/Genric/Cartservice-NP.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cartservice-np
spec:
  podSelector:
    matchLabels:
      app: cartservice
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: frontendservice
    ports:
    - protocol: TCP
      port: 7070
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: redis
    ports:
    - protocol: TCP
      port: 6379
