Base/Genric/Checkoutservice-NP.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: checkoutservice-policy
spec:
  podSelector:
    matchLabels:
      app: Checkoutservice
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: Frontendservice
    ports:
    - protocol: TCP
      port: 5050
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: shippingservice
    ports:
    - protocol: TCP
      port: 50051
  - to:
    - podSelector:
        matchLabels:
          app: Cartservice
    ports:
    - protocol: TCP
      port: 7070
  - to:
    - podSelector:
        matchLabels:
          app: Currencyservice
    ports:
    - protocol: TCP
      port: 7000
  - to:
    - podSelector:
        matchLabels:
          app: Productcatalogservice
    ports:
    - protocol: TCP
      port: 3550
  - to:
    - podSelector:
        matchLabels:
          app: Emailservice
    ports:
    - protocol: TCP
      port: 8080
  - to:
    - podSelector:
        matchLabels:
          app: Paymentservice
    ports:
    - protocol: TCP
      port: 50051
