Base/Genric/Currencyservice-NP.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: currencyservice-policy
spec:
  podSelector:
    matchLabels:
      app: currencyservice
  policyTypes:
    - Ingress    
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontendservice
        - podSelector:
            matchLabels:
              app: checkoutservice
      ports:
        - protocol: TCP
          port: 7000
