Base/Genric/Deny-all-NP.yaml
# kind: NetworkPolicy
# apiVersion: networking.k8s.io/v1
# metadata:
#   name: default-deny-all
# spec:
#   podSelector: {}
#   policyTypes:
#   - Ingress
#   - Egress


kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-all
spec:
  podSelector: {}
  policyTypes:
  - Ingress
