Base/Genric/Paymentservice-NP.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: paymentservice-policy
spec:
  podSelector:
    matchLabels:
      app: paymentservice
  policyTypes:
    - Ingress    
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: checkoutservice
      ports:
        - protocol: TCP
          port: 50051
