Base/Genric/ProductCatalogy-NP.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: productcatalogservice-policy
spec:
  podSelector:
    matchLabels:
      app: productcatalogservice
  policyTypes:
    - Ingress    
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontendservice
        - podSelector:
            matchLabels:
              app: checkoutservice
        - podSelector:
            matchLabels:
              app: recommendationservice      
      ports:
        - protocol: TCP
          port: 3550
