Base/Genric/Recommendation-NP.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: recommendationservice-np
spec:
  podSelector:
    matchLabels:
      app: Recommendationservice
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: Frontendservice
    ports:
    - protocol: TCP
      port: 8080    
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: Productcatalogservice
    ports:
    - protocol: TCP
      port: 3550
